<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/help_page"
    android:background="@color/backgroundBlue"
    tools:context="com.example.david.nhsappointment.HelpActivity">

    <TextView
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:id="@+id/add_image"
        android:text="NHS logo"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="@color/textWhite"
        tools:layout_editor_absoluteY="128dp"
        tools:layout_editor_absoluteX="102dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/splash_text"
        android:text="FAQs"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/textWhite"
        tools:layout_editor_absoluteY="337dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_below="@+id/add_image"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/homebutton"
        android:text="@string/home_button"
        android:id="@+id/home_button"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profile"
        android:id="@+id/profile_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_text"
        android:layout_centerHorizontal="true"
        android:text="@string/help_text"
        android:textColor="@color/textWhite"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/question_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="19dp"
        android:layout_toStartOf="@+id/splash_text"
        android:background="@color/backgroundBlue"
        android:text="@string/question_1"
        android:textColor="@color/textWhite" />

    <Button
        android:id="@+id/question_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/question_1"
        android:layout_alignStart="@+id/question_1"
        android:layout_below="@+id/question_1"
        android:layout_marginTop="11dp"
        android:background="@color/backgroundBlue"
        android:text="@string/question_2"
        android:textColor="@color/textWhite" />

    <Button
        android:id="@+id/question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/question_2"
        android:layout_alignStart="@+id/question_2"
        android:layout_below="@+id/question_2"
        android:layout_marginTop="13dp"
        android:background="@color/backgroundBlue"
        android:text="@string/question_3"
        android:textColor="@color/textWhite" />

    <Button
        android:id="@+id/question_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/question_3"
        android:layout_alignStart="@+id/question_3"
        android:layout_below="@+id/question_3"
        android:layout_marginTop="14dp"
        android:background="@color/backgroundBlue"
        android:text="@string/question_4"
        android:textColor="@color/textWhite" />

    <Button
        android:id="@+id/question_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/question_4"
        android:layout_alignStart="@+id/question_4"
        android:layout_below="@+id/question_4"
        android:layout_marginTop="13dp"
        android:background="@color/backgroundBlue"
        android:text="@string/question_5"
        android:textColor="@color/textWhite" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="180sp"
        android:layout_height="280sp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/question_1"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="32dp"
        android:text="Sample Text"
        android:textColor="@color/textWhite"/>

</RelativeLayout>
